@@ -125,6 +125,10 @@
       <name>Al Major</name>
     </contributor>
     <contributor>
+      <name>Pete Marsh</name>
+      <url>https://github.com/petedmarsh</url>
+    </contributor>
+    <contributor>
       <name>Blair Martin</name>
     </contributor>
     <contributor>
