@@ -64,6 +64,8 @@ Bug fixes since 2.3
 
 - Better Javadoc for DateTimeFormatter parsing [#78]
 
+- Better Javadoc for DateTimeFormat fraction of second [#62]
+
 
 Scala
 --------
